# immich-doctor

./: .dockerignore  .env.example  .env.unraid.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  agents.md  pyproject.toml
.github/: AGENTS.md  CODEOWNERS  SECURITY.md  agents.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: control-plane.agent.md  docs.agent.md  refactor.agent.md  workflow.agent.md
.github/workflows/: ci.yml  docker-publish.yml  lint.yml  project-default-status-hygiene.yml  project-inprogress-hygiene.yml  project-status-audit.yml
dev/testbed/: .env.example  README.md  docker-compose.real-storage.yml  docker-compose.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.ssh-agent.override.yml  docker-compose.unraid.yml  docker-compose.yml  entrypoint.sh  env-example.unraid.yml  real-storage-cifs-entrypoint.sh
docs/: architecture.md  configuration.md  development.md  docker.md  project-status-audit.md  ready-to-use-commands.md  review.backup-phase2-architecture.md  roadmap.backup-v1.md  roadmap.md  ui-contract.md  unraid.md
docs/architecture/: adr-persistent-file-index.md  file-catalog-data-model.md  migration-current-scan-to-persistent-index.md  quarantine-recovery-model.md
docs/backup/: execution.md  targets.md
docs/maintenance/: dependabot-remediation-plan.md
docs/roadmaps/: persistent-file-index-redesign.md
docs/workflows/: analyze.md  automations.md  backup.md  healthcheck.md  repair.md
immich_doctor/: __init__.py  __main__.py  main.py
immich_doctor/adapters/: external_tools.py  filesystem.py  media_probe.py  postgres.py
immich_doctor/api/: __init__.py  app.py  models.py
immich_doctor/backup/: __init__.py
immich_doctor/catalog/: __init__.py  consistency_service.py  consistency_state.py  models.py  paths.py  remediation_models.py  remediation_service.py  remediation_state_store.py  service.py  store.py  workflow_service.py
scripts/: project_audit_common.py  project_default_status_hygiene.py  project_inprogress_hygiene.py  project_status_audit.py
ui/: agents.ui.md
(+305 files in other folders)
