[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "immich-doctor"
version = "0.1.0"
description = "CLI-first validation and maintenance scaffold for Immich environments."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "immich-doctor contributors" }
]
dependencies = [
  "pydantic>=2.12.5,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "psycopg[binary]>=3.3.3,<4.0.0",
  "typer>=0.24.1,<1.0.0",
  "fastapi>=0.135.1",
  "uvicorn>=0.42.0,<1.0.0",
  "pillow>=12.1.1",
]

[project.scripts]
immich-doctor = "immich_doctor.main:run"

[tool.hatch.build.targets.wheel]
packages = ["immich_doctor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "ruff>=0.15.0,<0.16.0",
    "httpx>=0.28.1",
    "pre-commit>=4.5.0,<5.0.0",
]
